--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/node:latest
+      - image: circleci/node:lts
     branches:
       ignore:
         - gh-pages # list of branches to ignore
